tests/programs/type-errors/type_mismatch.rice.snap
---
source: tests/snapshots.rs
expression: output
---
success = false
stdout = ''
stderr = '''
Error:   × type mismatch
   ╭─[type_mismatch.rice:3:7]
 2 │   let x = "" in
 3 │   1 + x; ()
   ·       ┬
   ·       ╰── expected `int`, found `string`
 4 │ }
   ╰────

'''
